[package]
authors = ['Kai Schmidt <kai.schmidt@constructioninnovations.com>']
categories = ['parsing']
description = 'A simple interface for writing lexical analyzers'
documentation = 'https://docs.rs/tokenate'
edition = '2018'
keywords = [
  'token',
  'lexer',
  'lexical',
  'parse',
]
license = 'MIT'
name = 'tokenate'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/tokenate'
version = '0.1.0'

[dependencies]
smallvec = '1.6.1'
unicode_reader = '1.0.1'

[features]
debug = []
default = []

[[example]]
name = 'args'

[[example]]
name = 'calculator'
